# seqan

core/apps/index_saBwt_performance/: CMakeLists.txt  INFO  index_saBwt_performance.cpp  index_saBwt_performance.h
core/demos/: index_bwt_bcr.cpp  index_sa_bpr.cpp
core/include/seqan/: index.h
core/include/seqan/index/: index_bwt_bcr.h  index_sa_bpr.h  quicksort.h
core/tests/index/: CMakeLists.txt  test_index_bwt_bcr.cpp  test_index_bwt_bcr.h  test_index_sa_bpr.cpp  test_index_sa_bpr.h
include/seqan/: index.h
include/seqan/index/: index_bwt_bcr.h
tests/index/: CMakeLists.txt  test_index_sa_bpr.cpp
